--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Simple React App</title>
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <title>Hatch - Virtual Escape Room</title>
   </head>
   <body>
     <div id="root"></div>
