Update favicon file

--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
+    <link rel="icon" href="%PUBLIC_URL%/hatch-favicon.ico" type="image/x-icon" />
     <title>Hatch - Virtual Escape Room</title>
   </head>
   <body>
