--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/hatch-favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <title>Hatch - Virtual Escape Room</title>
-  </head>
-  <body>
+</head>
+
+<body>
     <div id="root"></div>
-  </body>
+</body>
+
 </html>
