--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <!-- <link rel="icon" href="%PUBLIC_URL%/hatch-favicon.ico" type="image/x-icon" /> -->
     <title>Hatch - Virtual Escape Room</title>
 </head>
 
